# d2itemreader

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  api.html  appveyor.yml  bitreader.c  bitreader.h  d2data.c  d2data.h  d2grailcheck.c  d2itemreader.c  d2itemreader.h  d2txtreader.c  d2txtreader.h  fuzz.yaml  index.html  make.bat  package-lock.json  search_index.json  util.c
.github/workflows/: ci.yml  cmake.yml  docs.yml
docs/: .bookignore  Doxyfile  README.md  SUMMARY.md  book.json  make.bat  make.sh  package.json
docs/_layouts/website/: page.html
docs/formats/: atma.md  d2.md  d2s.md  plugy.md
docs/styles/: website.css
examples/: CMakeLists.txt  itemcount.c  simple.c  streaming.c
formats/: atma.html  d2.html  d2s.html  plugy.html
src/: bitreader.c  bitreader.h  d2bitreader.c  d2bitreader.h  d2const.h  d2data.c  d2data.h  d2data_default.inc  d2err.c  d2err.h  d2gamedata.c  d2gamedata.h  d2gamedata_default  d2grailcheck.c  d2itemreader.c  d2itemreader.h  d2txtreader.c  d2txtreader.h  d2util.c  d2util.h  strset.c  strset.h  util.c  util.h
tests/: CMakeLists.txt  test_bitreader.c  test_d2bitreader.c  test_d2itemreader.c  test_d2itemreader_errors.c  test_d2txtreader.c  test_strset.c
tests/data/: badcorpseheader.d2s  classic.d2s  d2v110f.d2s  d2v111b.d2s  d2v112a.d2s  d2v113c.d2s  ear.d2i  ear.d2s  err-atma-unexpected-socketed.d2x  err-eof.d2s  err-string-too-long.d2x  expected_errors.txt  golem.d2s  nomerc.d2s  plugy14.sss  properties_test1.d2i  sets.d2s  simple.d2x  simple.sss
tests/fuzz/: CMakeLists.txt  README.md  fuzz_d2atmastash.cc  fuzz_d2char.cc  fuzz_d2itemreader.cc  fuzz_d2personalstash.cc  fuzz_d2sharedstash.cc  fuzz_d2txt.cc
tests/fuzz/dict/: d2atmastash.dict  d2char.dict  d2personalstash.dict  d2sharedstash.dict  d2txt.dict
tools/: CMakeLists.txt  extract_item.c  gen_d2data_default.c  gen_d2gamedata_default.c  gen_expected_errors.c
